[gd_scene load_steps=7 format=3 uid="uid://cntax283353xi"]

[ext_resource type="Script" path="res://Objects/bed.gd" id="1_t46ld"]

[sub_resource type="BoxShape3D" id="BoxShape3D_b8bpg"]
size = Vector3(2, 0.5, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_jqdrb"]

[sub_resource type="BoxMesh" id="BoxMesh_oa1o2"]
resource_local_to_scene = true
material = SubResource("StandardMaterial3D_jqdrb")
size = Vector3(2, 0.5, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_2ebph"]
size = Vector3(0.2, 0.1, 0.2)

[sub_resource type="BoxMesh" id="BoxMesh_y5nb5"]
size = Vector3(0.2, 0.1, 0.2)

[node name="Bed" type="StaticBody3D" groups=["Beds", "Unoccupied_beds"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 0.5, 0)
script = ExtResource("1_t46ld")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_b8bpg")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_oa1o2")

[node name="Pillow" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.7, 0.3, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Pillow"]
shape = SubResource("BoxShape3D_2ebph")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Pillow"]
mesh = SubResource("BoxMesh_y5nb5")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="Pillow" to="." method="_on_pillow_area_entered"]
[connection signal="area_exited" from="Pillow" to="." method="_on_pillow_area_exited"]
[connection signal="body_entered" from="Pillow" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Pillow" to="." method="_on_area_3d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
